# claude-code-update

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: sync-claude-releases.yml
scripts/: download_claude.py
